   Version 0.66
   Version 0.65
   Version 0.64

-----------------------------------------------------------------------
 Version 0.69
 ============

 Released on 

 Total files count:    
 Total lines count: 

 New features and improvements:

   - Display unsettled entries on settleable accounts (todo #1381).
   - Display unreconciliated entries on reconciliable accounts (todo #783).

 Bug fixes:

   - myICollectionable: make sure the dataset is loaded before first insertion.
   - ofaAccountFrameBin: fix notebook size when the dataset is empty.
   - ofaAccountPage: fix page display when the dataset is empty.
   - ofaAccountStore: let the treeview be repopulated on collection reload.
   - ofaOpeTemplateFrameBin: fix notebook size when the dataset is empty.
   - ofaOpeTemplatePage: fix page display when the dataset is empty.
   - ofaOpeTemplateStore: let the treeview be repopulated on collection reload.

 Other changes:

   - Clarify the reference management of the collection (todo #1359).
   - ofaAccentryStore: new class.
   - ofaAccentryTreeview: new class.
   - ofaUnreconcilPage: new class.
   - ofaUnsettledPage: new class.

-----------------------------------------------------------------------
 Version 0.68
 ============

 Released on 2017- 3-21

 Total files count:    798
 Total lines count: 532196

 New features and improvements:

   Core DB Model v36
   Recurrent DB Model v9

   - CheckDBMSIntegrity: errors are displayed in red (todo #1395).
   - ClosingParms: improve account check (todo #513).
   - EntryPage: have an extended filter (todo #733).
   - EntryPage: may be opened several times.
   - ExerciceCloseAssistant: archive opening accounts balances (todo #1388).
   - Improve error messages when entering an operation (todo #1356).
   - Display conciliation group from an entry or a BAT line (todo #1372).
   - Review the window geometry management (todo #1285).
   - Let the user have a pin button to detach main tabs.