@@ -23,6 +23,7 @@
 
    - Display unsettled entries on settleable accounts (todo #1381).
    - Display unreconciliated entries on reconciliable accounts (todo #783).
+   - Reconciliation page auto-updates when an external identifier changes (todo #1407).
 
  Bug fixes:
 
